fix for pagedlist pager font color in dark mode

--- a/wwwroot/assets/css/style.css
+++ b/wwwroot/assets/css/style.css
@@ -11881,9 +11881,6 @@ body.active-dark-mode h5,
 body.active-dark-mode h6 {
   color: #ffffff;
 }
-body.active-dark-mode a {
-  color: #ffffff;
-}
 
 /* Elements  */
 body.active-dark-mode ul.social-with-text li a i {
